Price list + css for it, some pictures

--- a/css/agency.css
+++ b/css/agency.css
@@ -727,3 +727,7 @@ img::-moz-selection {
 body {
   webkit-tap-highlight-color: #fed136;
 }
+.price-li {
+  font-size: 32px;
+  list-style-type: none;
+}
