--- a/less/agency.less
+++ b/less/agency.less
@@ -722,3 +722,8 @@ img::-moz-selection {
 body {
     webkit-tap-highlight-color: @brand-primary;
 }
+
+.price-li {
+    font-size: 32px;
+    list-style-type: none;
+}
