--- a/css/agency.css
+++ b/css/agency.css
@@ -218,7 +218,12 @@ fieldset[disabled] .btn-xl.active {
   }
 }
 header {
-  background-image: url('../img/header-bg.jpg');
+  /*	background-image: url('../img/carwash/mainwallpaper.jpg');
+    linear-gradient(
+    rgba(0, 0, 0, 0.7),
+    rgba(0, 0, 0, 0.7)
+    ),*/
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('../img/carwash/mainwallpaper.jpg');
   background-repeat: none;
   background-attachment: scroll;
   background-position: center center;
