--- a/less/agency.less
+++ b/less/agency.less
@@ -162,7 +162,17 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 header {
-	background-image: url('../img/header-bg.jpg');
+/*	background-image: url('../img/carwash/mainwallpaper.jpg');
+    linear-gradient(
+    rgba(0, 0, 0, 0.7),
+    rgba(0, 0, 0, 0.7)
+    ),*/
+    background:
+    linear-gradient(
+            rgba(0, 0, 0, 0.5),
+            rgba(0, 0, 0, 0.5)
+    ),
+    url('../img/carwash/mainwallpaper.jpg');
 	background-repeat: none;
 	background-attachment: scroll;
 	background-position: center center;
