--- a/less/agency.less
+++ b/less/agency.less
@@ -61,6 +61,11 @@ h1, h2, h3, h4, h5, h6 {
 	background-color: @gray-darkest;
 }
 
+#map-canvas {
+  width: inherit;
+  height: 400px;
+}
+
 // Restyled Primary Buttons
 
 .btn-primary {
