Add gallery images

--- a/css/agency.css
+++ b/css/agency.css
@@ -1,3 +1,6 @@
+.gallery-item {
+  padding: 10px;
+}
 body {
   overflow-x: hidden;
   font-family: "Roboto Slab", "Helvetica Neue", Helvetica, Arial, sans-serif;
