--- a/less/agency.less
+++ b/less/agency.less
@@ -2,6 +2,9 @@
 @import "mixins.less";
 
 // Global Components
+.gallery-item {
+  padding: 10px;
+}
 
 body {
 	overflow-x: hidden;
@@ -742,3 +745,4 @@ body {
     font-size: 32px;
     list-style-type: none;
 }
+
